# Rust-Secure-Vault-CLI

./: Cargo.toml  README.MD
src/: cli.rs  crypto.rs  json_vault.rs  main.rs
